# nova_voice_engine_V3

./: CMakeLists.txt  README.md
include/app/: application.hpp
include/capture/: audio_capturer.hpp
include/codec/: i_audio_decoder.hpp  i_audio_encoder.hpp  opus_codec.hpp
include/core/: non_copyable.hpp  packet.hpp
include/network/: udp_receiver.hpp  udp_sender.hpp
include/playback/: audio_player.hpp
include/streaming/: collector.hpp  slicer.hpp
src/app/: application.cpp  main.cpp
src/capture/: audio_capturer.cpp
src/codec/: opus_codec.cpp
src/network/: udp_receiver.cpp  udp_sender.cpp
src/playback/: audio_player.cpp
